# bd-watcher

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
assets/: demo.cast
docs/superpowers/specs/: 2026-04-18-bd-watcher-design.md
scripts/: demo_bd_shim.py  record-demo.sh
src/: app.rs  bd.rs  clipboard.rs  diff.rs  gh.rs  lib.rs  main.rs  model.rs  theme.rs
src/ui/: computer.rs  mod.rs  tv.rs  widgets.rs
tests/: diff_test.rs  parse_real_json.rs
