[package]
name = "bd-watcher"
version = "0.1.5"
edition = "2021"
description = "Lightweight TUI dashboard that watches bd (beads) graph progress"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = "thin"
strip = true
opt-level = "z"
codegen-units = 1
